@@ -1,3 +1,7 @@
+[2020-04-01]
+- Added Eclase and Old Glast Heim monsters
+- Added April patch cards 
+
 [2020-03-25]
 - Fixed Gold Scaraba card ATK bonus for damage computation
 - Fixed Imperial Spear ATK bonus for damage computation
